--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.21",
-    "@docusaurus/plugin-client-redirects": "^2.0.0-beta.17",
-    "@docusaurus/plugin-sitemap": "^2.0.0-beta.17",
-    "@docusaurus/preset-classic": "2.0.0-beta.21",
+    "@docusaurus/core": "^2.0.1",
+    "@docusaurus/plugin-client-redirects": "^2.0.1",
+    "@docusaurus/plugin-content-docs": "^2.0.1",
+    "@docusaurus/plugin-content-pages": "^2.0.1",
+    "@docusaurus/plugin-debug": "^2.0.1",
+    "@docusaurus/plugin-sitemap": "^2.0.1",
+    "@docusaurus/preset-classic": "2.0.1",
+    "@docusaurus/theme-classic": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.2.1",
